<resources>
    <string name="app_name">Contact</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Gmail</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_new_contact_here">Add New Contact Here !!</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="enter_2nd_number">Enter Home Number</string>
    <string name="person_detail">Person Detail</string>
    <string name="person_image">person image</string>
    <string name="contact_image">contact image</string>
</resources>