<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".AddContactScreen">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#3E700C"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/add_new_contact_here"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_edit_text"
        android:textColor="@color/white"
        android:autofillHints="Abhishek"
        android:textColorHint="@color/white"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/border_edit_text"
        android:textColorHint="@color/white"
        android:autofillHints="8085217400"
        android:hint="@string/enter_number" />

    <EditText
        android:id="@+id/number_h"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_2nd_number"
        android:textColor="@color/white"
        android:autofillHints="Enter 2nd Number"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:background="@drawable/border_edit_text"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>


    <EditText
        android:id="@+id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textSize="24sp"
        android:background="@drawable/border_edit_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="abhishekpatidar7446@gmail.com"
        android:hint="@string/enter_email"
        android:paddingEnd="0dp"/>



    <Button
        android:id="@+id/save"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:gravity="top"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/black"
        android:layout_gravity="end"
        android:text="@string/save"
        />


</LinearLayout>