<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditExixtingContactScreen">

    <!-- TODO: Update blank fragment layout -->

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="48dp"
       android:orientation="horizontal">


       <ImageButton
           android:id="@+id/toolbar"
           android:layout_width="0dp"
           android:layout_height="48dp"
           android:background="@drawable/back_button"
           android:layout_weight="1"/>

       <TextView android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/black"
        android:textSize="28sp"
        android:gravity="center"
        android:text="@string/edit_contact"
        android:textColor="@color/white"/>
   </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView

                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/contact_image"
                android:src="@drawable/ic_baseline_person_24"
            />
            <EditText
                android:id="@+id/name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_text_fields_24"
                android:minHeight="48dp"
                android:inputType="text"
                android:textSize="24sp"
                android:autofillHints="name"
                android:textColor="#71AA2F"
                android:labelFor="@id/name2"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_call_24"
                android:minHeight="48dp"
                android:inputType="phone|number"
                android:textSize="24sp"
                android:autofillHints="phone"
                android:textColor="#71AA2F"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/phone2_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_call_24"
                android:minHeight="48dp"
                android:inputType="phone|number"
                android:textSize="24sp"
                android:textColor="#71AA2F"
                android:autofillHints="phone"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:minHeight="48dp"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                android:labelFor="@id/email2"
                android:textColor="#71AA2F"
                android:autofillHints="emailAddress"
                android:padding="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>







