<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0A0B0A"
    tools:context=".ContactDetailScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <!-- TODO: Update blank fragment layout -->

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp"
                android:id="@+id/guidline"
            />



            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toolbar1"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/teal_700"
                android:text="@string/person_detail"/>

            <ImageButton
                android:id="@+id/toolbar1"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:background="@drawable/detail_backbutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="58dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/person_image"
                android:background="@drawable/circle"/>

            <TextView
                android:id="@+id/name1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/number1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                app:layout_constraintTop_toBottomOf="@+id/name1"
                app:layout_constraintStart_toStartOf="@+id/guidline"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:background="@drawable/border_edit_text"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/phonelogo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/name1"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/button_style"
                android:drawableBottom="@drawable/ic_baseline_call_24"

                app:layout_constraintEnd_toStartOf="@+id/guidline"/>

            <TextView
                android:id="@+id/number1_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/number1"
                app:layout_constraintStart_toStartOf="@+id/guidline"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:background="@drawable/border_edit_text"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/phonelogo_h"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/number1"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/button_style"
                android:drawableBottom="@drawable/ic_baseline_call_24"
                app:layout_constraintEnd_toStartOf="@+id/guidline"/>

            <TextView
                android:id="@+id/email1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                app:layout_constraintTop_toBottomOf="@+id/number1_h"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidline"
                android:textSize="24sp"
                android:background="@drawable/border_edit_text"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/emaillogo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number1_h"
                android:background="@drawable/button_style"
                android:drawableBottom="@drawable/ic_baseline_email_24"
                app:layout_constraintEnd_toStartOf="@+id/guidline"/>

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email1"
                android:textColor="#F12644"
                android:textSize="24sp"
                android:text="@string/edit"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email1"
                android:textColor="#F61537"
                android:textSize="24sp"
                android:text="@string/delete"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
